--- a/index.html
+++ b/index.html
@@ -1,49 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ezekiel Yohanna | AI/ML Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ezekiel Yohanna | AI/ML Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Header / Hero Section -->
-    <header>
-        <img src="assets/profile.png" alt="Profile Picture" class="profile-pic">
-        <h1>Ezekiel Yohanna</h1>
-        <h2>AI/ML Engineer & MLOps Specialist</h2>
-        <p>Building end-to-end AI solutions and agentic workflows.</p>
-    </header>
 
-    <!-- Skills Section -->
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>Machine Learning & Deep Learning</li>
-            <li>Azure MLOps, CI/CD, Docker, Kubernetes</li>
-            <li>Python, SQL, PowerShell, Bash</li>
-            <li>Agentic AI Workflow Development</li>
-        </ul>
-    </section>
+  <!-- Navbar -->
+  <nav id="navbar">
+    <div class="nav-container">
+      <a href="#hero" class="logo">Ezekiel Yohanna</a>
+      <ul class="nav-links">
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
 
-    <!-- Projects Section -->
-    <section id="projects">
-        <h2>Projects</h2>
-        <ul>
-            <li><a href="projects/project1.html">AI Car Park Allocation</a></li>
-            <li><a href="projects/project2.html">Disrepair Risk Prediction Automation</a></li>
-        </ul>
-    </section>
+  <!-- Hero Section -->
+  <section id="hero">
+    <div class="hero-content">
+      <img src="assets/profile.jpg" alt="Profile Picture" class="profile-pic">
+      <h1>Ezekiel Yohanna</h1>
+      <h2>AI/ML Engineer & MLOps Specialist</h2>
+      <p>Building end-to-end AI solutions and agentic workflows.</p>
+    </div>
+  </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <p>Email: <a href="mailto:you@example.com">you@example.com</a></p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">linkedin.com/in/yourprofile</a></p>
-    </section>
+  <!-- Skills Section -->
+  <section id="skills">
+    <h2>Skills</h2>
+    <div class="skills-container">
+      <div class="skill-card">Machine Learning & Deep Learning</div>
+      <div class="skill-card">Azure MLOps, CI/CD, Docker, Kubernetes</div>
+      <div class="skill-card">Python, SQL, PowerShell, Bash</div>
+      <div class="skill-card">Agentic AI Workflow Development</div>
+    </div>
+  </section>
 
-    <footer>
-        <p>© 2025 Ezekiel Yohanna</p>
-    </footer>
+  <!-- Projects Section -->
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="projects-container">
+      <div class="project-card">
+        <h3>AI Car Park Allocation</h3>
+        <p>Image classification and agentic workflows to optimize car park allocation.</p>
+        <a href="projects/project1.html" class="btn">View Project</a>
+      </div>
+      <div class="project-card">
+        <h3>Disrepair Risk Prediction Automation</h3>
+        <p>Automated risk assessment using ML pipelines and Azure MLOps.</p>
+        <a href="projects/project2.html" class="btn">View Project</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <h2>Contact Me</h2>
+    <div class="contact-container">
+      <p>Email: <a href="mailto:you@example.com">you@example.com</a></p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">linkedin.com/in/yourprofile</a></p>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 Ezekiel Yohanna</p>
+  </footer>
+
 </body>
 </html>
