--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- Hero Section -->
   <section id="hero">
     <div class="hero-content">
-      <img src="assets/profile.jpg" alt="Profile Picture" class="profile-pic">
+      <img src="assets/profile.png" alt="Profile Picture" class="profile-pic">
       <h1>Ezekiel Yohanna</h1>
       <h2>AI/ML Engineer & MLOps Specialist</h2>
       <p>Building end-to-end AI solutions and agentic workflows.</p>
